Fix alignment issues

--- a/style.css
+++ b/style.css
@@ -29,18 +29,25 @@ body  {
   flex-wrap: wrap;
   padding: 16px;
   gap: 16px;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.home-content {
+  align-items: center;
+  flex-grow: 1;
 }
 
 .nav-bar {
   display: flex;
   flex-wrap: wrap;
-  align-items: flex-start;
+  align-content: flex-start;
   width: 250px;
   flex-shrink: 0;
   flex-grow: 0;
   background-color: rgb(61, 122, 122);
   padding: 16px;
-  text-align: center;
+  gap: 20px;
 }
 
 .description {
@@ -55,7 +62,7 @@ body  {
 }
 
 img {
-  max-width: 400px;
+  width: 400px;
   height: auto;
   margin-left: auto;
   margin-right: auto;
